--- a/app/templates/Site/default.latte
+++ b/app/templates/Site/default.latte
@@ -6,7 +6,26 @@
 </div>
 
 <div id="content">
-	
+
+	<table id="computers">
+		<tr>
+			<th>Název</th>
+			<th>IP</th>
+			<th>MAC</th>
+			<th>Status</th>
+		</tr>
+		<tr n:foreach="$computers as $name => $computer" id="computer_{$name}">
+			<td>{$name}</td>
+			<td>{$computer['ip']}</td>
+			<td>{$computer['mac']}</td>
+			<td>
+				<a href="#" id="computer_wakeOn_{$name}" class="computer_wakeOn" data-name="{$name}">
+					<img src="{$basePath}/images/offline.gif" alt="offline" title="offline" id="computer_status_{$name}" class="computer_status" data-name="{$name}" />
+				</a>
+			</td>
+
+		</tr>
+	</table>
 	
 </div>
 
@@ -14,5 +33,7 @@
 
 
 {block head}
+
+<script type="text/javascript" src="{$basePath}/js/misak.js"></script>
 
 {/block}
