--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -49,7 +49,7 @@ a:hover, a:active, a:focus { background-color: #006aeb; text-decoration: none; c
 #banner h1 { color: teal;
 		 font-size: 50px; line-height: 121px; margin: 0; padding-left: 40px; background: url('http://zabka.avantcore.cz/userfiles/image/mz_logo.png') no-repeat 95%; text-shadow: 1px 1px 0 rgba(0, 0, 0, .9); }
 
-#content { background: white; border: 1px solid #eff4f7; border-radius: 0 0 12px 12px; padding: 10px 40px; }
+#content { background: white; border: 1px solid #eff4f7; border-radius: 0 0 12px 12px; padding: 10px 10px; }
 #content > h2 { font-size: 130%; color: #666; clear: both; padding: 1.2em 0; margin: 0; }
 
 h2 span { color: #87A7D5; }
@@ -84,3 +84,24 @@ footer { font-size: 70%; padding: 1em 0; color: gray; }
 .jush-clr { color: #007800; }
 .jush a { color: inherit; background: transparent; }
 .jush-latte { color: #D59401; font-weight: bold }
+
+.content-box {
+	width: 86%;
+	background: #f0f0f0;
+	margin: 4%;
+	min-height: 200px;
+	padding: 3%;
+	border: 1px solid #e6e6e6;
+	border-radius: 5px;
+}
+
+#computers {
+	width: 100%;
+	border: 1px solid darkgray;
+	border-radius: 3px;
+}
+
+#computers th {
+	background-color: #333;
+	color: #9F9C7F;
+}
