--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -32,22 +32,52 @@ a[href^="error:"] {
 }
 
 
-html { overflow-y: scroll; }
-body { font: 14px/1.65 Verdana, "Geneva CE", lucida, sans-serif; background: #3484d2; color: #333; margin: 38px auto; max-width: 940px; min-width: 770px; }
+html {
+	overflow-y: scroll;
+}
+body {
+	font: 14px/1.65 Verdana, "Geneva CE", lucida, sans-serif; background: slategrey;
 
-h1, h2 { font: normal 150%/1.3 Georgia, "New York CE", utopia, serif; color: #1e5eb6; -webkit-text-stroke: 1px rgba(0,0,0,0); }
+	color: #333;
+	margin: 38px auto;
+	max-width: 940px;
+	min-width: 770px;
+}
 
-img { border: none; }
+h1, h2 { 
+	font: normal 150%/1.3 Georgia, "New York CE", utopia, serif;
+	color: #1e5eb6;
+	-webkit-text-stroke: 1px rgba(0,0,0,0);
+}
 
-a { color: #006aeb; padding: 3px 1px; }
+img { 
+	border: none;
+}
 
-a:hover, a:active, a:focus { background-color: #006aeb; text-decoration: none; color: white; }
+a {
+	color: #006aeb;
+	padding: 3px 1px;
+}
 
-#banner { border-radius: 12px 12px 0 0; 
-		background-color: whitesmoke;
-		  }
-#banner h1 { color: teal;
-		 font-size: 50px; line-height: 121px; margin: 0; padding-left: 40px; background: url('http://zabka.avantcore.cz/userfiles/image/mz_logo.png') no-repeat 95%; text-shadow: 1px 1px 0 rgba(0, 0, 0, .9); }
+a:hover, a:active, a:focus { 
+	background-color: #006aeb;
+	text-decoration: none;
+	color: white;
+}
+
+#banner {
+	border-radius: 12px 12px 0 0;
+	background-color: whitesmoke;
+}
+#banner h1 {
+	color: teal;
+	font-size: 50px;
+	line-height: 121px;
+	margin: 0;
+	padding-left: 40px;
+	background: url('http://zabka.avantcore.cz/userfiles/image/mz_logo.png') no-repeat 95%;
+	text-shadow: 1px 1px 0 rgba(0, 0, 0, .9);
+}
 
 #content { background: white; border: 1px solid #eff4f7; border-radius: 0 0 12px 12px; padding: 10px 10px; }
 #content > h2 { font-size: 130%; color: #666; clear: both; padding: 1.2em 0; margin: 0; }
