--- a/app/templates/Site/default.latte
+++ b/app/templates/Site/default.latte
@@ -7,6 +7,10 @@
 
 <div id="content">
 
+	<div id="logout">
+		<a n:href="Sign:out">Odhlásit</a>
+	</div>
+
 	<div class="content-box">
 		<h1>Počítače</h1>
 		<table id="computers">
