--- a/app/templates/Sign/in.latte
+++ b/app/templates/Sign/in.latte
@@ -2,6 +2,12 @@
 
 {block #content}
 
-<h1>Sign in</h1>
+<div id="sign-in">
 
-{control signInForm}
+	<h1>Přihlášení</h1>
+
+	<hr />
+
+	{control signInForm}
+
+</div>
